--- a/frontend/lessons.html
+++ b/frontend/lessons.html
@@ -60,7 +60,18 @@
     +
   </button>
 
-  <div id="lessons-container" class="mt-8 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-5 gap-4"></div>
+  <!-- Lessons Grouped by Date -->
+  <div id="lessons-container" class="flex flex-col gap-6 mt-8">
+    <!-- JS will insert: -->
+    <!-- 
+      <div>
+        <h3 class="text-lg font-semibold text-white mb-2">Monday, July 22</h3>
+        <div class="grid grid-cols-2 xl:grid-cols-5 gap-4">
+          <!-- lesson cards here -->
+        </div>
+      </div> 
+    -->
+  </div>
 </section>
 
 <!-- Form popup wrapper -->
@@ -85,6 +96,7 @@
     </form>
   </div>
 </div>
+
 
 
 
