--- a/frontend/lessons.html
+++ b/frontend/lessons.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 </header>
-<section class="p-4 pb-20 max-w-screen-xl mx-auto">
+<section class="pt-0 p-4 pb-20 max-w-screen-xl mx-auto">
   <h2 class="text-xl font-bold text-white mb-4">Weekly Lessons</h2>
 
   <!-- Desktop Add Lesson Button -->
