--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -59,6 +59,7 @@
   </div>
 </header>
 <!-- Task Form Popup Container -->
+ <h2 class="text-xl font-bold text-white pt-0 mb-4">Tasks</h2>
 <div id="task-form-popup" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
   <form id="task-form" class="bg-white dark:bg-zinc-900 p-4 rounded-lg w-full max-w-md">
     <label for="task-text">Task</label>
