--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -64,8 +64,11 @@
     <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
       <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Tasks</h2>
       <div id="log-tasks-container"
-        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+       class="w-full gap-3 
+       flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar 
+       sm:grid sm:grid-cols-2 sm:overflow-visible sm:snap-none 
+       lg:grid-cols-3 lg:auto-rows-fr"
+
         <!-- task cards -->
       </div>
     </section>
