--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -57,50 +57,50 @@
 </header>
  <div id="daily" class="flex flex-col gap-5 p-5">
 
-  <!-- ✅ TRUE 2x2 Grid on ALL screen sizes -->
-  <div class="grid grid-cols-2 gap-5">
+ <div class="grid grid-cols-2 gap-5">
 
-    <!-- Today’s Tasks -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Tasks</h2>
-      <div id="log-tasks-container"
-        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
-        <!-- task cards -->
-      </div>
-    </section>
+  <!-- Today’s Tasks -->
+  <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Tasks</h2>
+    <div id="log-tasks-container"
+      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
+             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      <!-- task cards -->
+    </div>
+  </section>
 
-    <!-- Today’s Lessons -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Lessons</h2>
-      <div id="log-lessons-container"
-        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
-        <!-- lesson cards -->
-      </div>
-    </section>
+  <!-- Today’s Lessons -->
+  <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Lessons</h2>
+    <div id="log-lessons-container"
+      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
+             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      <!-- lesson cards -->
+    </div>
+  </section>
 
-    <!-- Today’s Goals -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Goals</h2>
-      <div id="log-goals-container"
-        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
-        <!-- goal cards -->
-      </div>
-    </section>
+  <!-- Today’s Goals -->
+  <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Goals</h2>
+    <div id="log-goals-container"
+      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
+             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      <!-- goal cards -->
+    </div>
+  </section>
 
-    <!-- Today’s Notes -->
-    <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
-      <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Notes</h2>
-      <div id="log-notes-container"
-        class="w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-               sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
-        <!-- note cards -->
-      </div>
-    </section>
+  <!-- Today’s Notes -->
+  <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
+    <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Notes</h2>
+    <div id="log-notes-container"
+      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
+             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      <!-- note cards -->
+    </div>
+  </section>
 
-  </div>
+</div>
+
 
   <!-- 🔽 BELOW THE GRID -->
 
