--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -57,14 +57,13 @@
 </header>
  <div id="daily" class="flex flex-col gap-5 p-5">
 
- <div class="grid grid-cols-2 gap-5">
+ <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
 
   <!-- Today’s Tasks -->
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Tasks</h2>
     <div id="log-tasks-container"
-      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
       <!-- task cards -->
     </div>
   </section>
@@ -73,8 +72,7 @@
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Lessons</h2>
     <div id="log-lessons-container"
-      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
       <!-- lesson cards -->
     </div>
   </section>
@@ -83,8 +81,7 @@
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Goals</h2>
     <div id="log-goals-container"
-      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
       <!-- goal cards -->
     </div>
   </section>
@@ -93,8 +90,7 @@
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Notes</h2>
     <div id="log-notes-container"
-      class="w-full min-h-[100px] flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
-             sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
       <!-- note cards -->
     </div>
   </section>
