--- a/frontend/daily.html
+++ b/frontend/daily.html
@@ -57,44 +57,38 @@
 </header>
  <div id="daily" class="flex flex-col gap-5 p-5">
 
- <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
-
+ <div class="w-full grid grid-cols-1 md:grid-cols-2 gap-5">
   <!-- Today’s Tasks -->
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Tasks</h2>
-    <div id="log-tasks-container"
-      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
-      <!-- task cards -->
+    <div id="log-tasks-container">
+      <!-- task cards will be added by JS -->
     </div>
   </section>
 
   <!-- Today’s Lessons -->
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Lessons</h2>
-    <div id="log-lessons-container"
-      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
-      <!-- lesson cards -->
+    <div id="log-lessons-container">
+      <!-- lesson cards will be added by JS -->
     </div>
   </section>
 
   <!-- Today’s Goals -->
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Goals</h2>
-    <div id="log-goals-container"
-      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
-      <!-- goal cards -->
+    <div id="log-goals-container">
+      <!-- goal cards will be added by JS -->
     </div>
   </section>
 
   <!-- Today’s Notes -->
   <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-4 shadow-lg flex flex-col gap-3">
     <h2 class="text-sm sm:text-base text-[#f0f0f0]">Today’s Notes</h2>
-    <div id="log-notes-container"
-      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
-      <!-- note cards -->
+    <div id="log-notes-container">
+      <!-- note cards will be added by JS -->
     </div>
   </section>
-
 </div>
 
 
