--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -72,7 +72,7 @@
   <template id="day-expand-template">
     <div class="day-expand bg-[#1f1f1f] p-4 rounded-xl shadow-lg mt-2 flex flex-col gap-4">
       <!-- Tasks -->
-      <section class="bg-[#1f1f1f] p-3 rounded-lg shadow-inner">
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
         <h3 class="text-sm text-[#f0f0f0] mb-2">Tasks</h3>
         <div class="task-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
           <!-- Task cards go here -->
@@ -80,7 +80,7 @@
       </section>
 
       <!-- Goals -->
-      <section class="bg-[#1f1f1f] p-3 rounded-lg shadow-inner">
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
         <h3 class="text-sm text-[#f0f0f0] mb-2">Goals</h3>
         <div class="goal-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
           <!-- Goal cards go here -->
@@ -88,7 +88,7 @@
       </section>
 
       <!-- Lessons -->
-      <section class="bg-[#1f1f1f] p-3 rounded-lg shadow-inner">
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
         <h3 class="text-sm text-[#f0f0f0] mb-2">Lessons</h3>
         <div class="lesson-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
           <!-- Lesson cards go here -->
@@ -96,7 +96,7 @@
       </section>
 
       <!-- Notes -->
-      <section class="bg-[#1f1f1f] p-3 rounded-lg shadow-inner">
+<section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
         <h3 class="text-sm text-[#f0f0f0] mb-2">Notes</h3>
         <div class="note-container flex overflow-x-auto gap-3 snap-x snap-mandatory scroll-smooth no-scrollbar">
           <!-- Notes cards go here -->
