--- a/frontend/weekly.html
+++ b/frontend/weekly.html
@@ -104,7 +104,7 @@
       <!-- 1x2 Grid: Tasks + Goals -->
       <div class="grid grid-cols-2 gap-4">
         <!-- Tasks -->
-        <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
+<section class="bg-[#181818] text-[#e4e4e7] rounded-xl p-3 shadow-[0_6px_20px_rgba(0,0,0,0.45)] flex flex-col gap-2">
           <h3 class="text-sm sm:text-base text-[#f0f0f0]">Tasks</h3>
           <div class="task-container w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
                       sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
@@ -113,7 +113,7 @@
         </section>
 
         <!-- Goals -->
-        <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
+<section class="bg-[#181818] text-[#e4e4e7] rounded-xl p-3 shadow-[0_6px_20px_rgba(0,0,0,0.45)] flex flex-col gap-2">
           <h3 class="text-sm sm:text-base text-[#f0f0f0]">Goals</h3>
           <div class="goal-container w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
                       sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
@@ -123,7 +123,7 @@
       </div>
 
       <!-- Lessons -->
-      <section class="bg-[#1f1f1f] text-[#e4e4e7] rounded-xl p-3 shadow-lg flex flex-col gap-2">
+<section class="bg-[#181818] text-[#e4e4e7] rounded-xl p-3 shadow-[0_6px_20px_rgba(0,0,0,0.45)] flex flex-col gap-2">
         <h3 class="text-sm sm:text-base text-[#f0f0f0]">Lessons</h3>
         <div class="lesson-container w-full flex overflow-x-auto snap-x snap-mandatory scroll-smooth no-scrollbar gap-3
                     sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible sm:snap-none">
