--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <title>OBIZU</title>
+
   <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="home.css" />
@@ -169,7 +170,6 @@
     <span id="repeat">Repeat</span>
   </footer>
   <div id="fork-fly"></div>
-
   <div id="z-animation">
     <span class="z">Z</span>
     <span class="z">Z</span>
@@ -310,4 +310,15 @@
         Weekly
       </a>
     </nav>
-  </div
+  </div>
+
+  <!-- Scripts -->
+  <script src="script.js"></script>
+  <script src="nav.js"></script>
+  <script src="quotes.js"></script>
+  <script src="home.js"></script>
+  <script src="ai.js"></script>
+  <script src="screen.js"></script>
+  <script src="animate.js"></script>
+</body>
+</html>
