--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,13 @@
         </div>
       </div>
     </header>
-
+<!-- DASHBOARD PAGE HEADER -->
+<div class="w-full max-w-5xl mx-auto px-6 mt-10 mb-4">
+  <h1 class="text-3xl sm:text-4xl font-extrabold tracking-tight text-[#e4e4e7] flex items-center gap-2">
+    <svg class="w-8 h-8 text-[#7c3aed]" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="4" stroke="currentColor" fill="none"/><path d="M7 17v-4m0 0V7m0 6h10" stroke="currentColor" /></svg>
+    Dashboard
+  </h1>
+</div>
     <!-- === REDESIGNED DASHBOARD START === -->
     <div id="home" class="dashboard flex flex-col gap-8 p-6 max-w-5xl mx-auto mt-8">
 
