--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="dashboard-actions">
-          <button class="action-btn primary" onclick="document.getElementById('drawer').classList.remove('hidden')">
+          <button class="action-btn primary" id="quick-actions-btn">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <line x1="12" y1="5" x2="12" y2="19"/>
               <line x1="5" y1="12" x2="19" y2="12"/>
@@ -103,8 +103,8 @@
         <div class="stat-card" id="stat-tasks-completed">
           <div class="stat-icon tasks">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
-              <polyline points="22,4 12,14.01 9,11.01"/>
+              <path d="M9 11l3 3L22 4"/>
+              <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/>
             </svg>
           </div>
           <div class="stat-content">
@@ -116,8 +116,9 @@
         <div class="stat-card" id="stat-goals-completed">
           <div class="stat-icon goals">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="12" cy="12" r="10"/>
-              <polyline points="12,6 12,12 16,14"/>
+              <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+              <path d="M2 17l10 5 10-5"/>
+              <path d="M2 12l10 5 10-5"/>
             </svg>
           </div>
           <div class="stat-content">
@@ -129,8 +130,11 @@
         <div class="stat-card" id="stat-lessons-completed">
           <div class="stat-icon lessons">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/>
-              <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/>
+              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+              <polyline points="14,2 14,8 20,8"/>
+              <line x1="16" y1="13" x2="8" y2="13"/>
+              <line x1="16" y1="17" x2="8" y2="17"/>
+              <polyline points="10,9 9,9 8,9"/>
             </svg>
           </div>
           <div class="stat-content">
@@ -142,7 +146,7 @@
         <div class="stat-card streak" id="streak-tasks">
           <div class="stat-icon streak">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/>
+              <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
             </svg>
           </div>
           <div class="stat-content">
@@ -154,7 +158,7 @@
         <div class="stat-card streak" id="streak-goals">
           <div class="stat-icon streak">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/>
+              <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
             </svg>
           </div>
           <div class="stat-content">
@@ -166,7 +170,8 @@
         <div class="stat-card streak" id="streak-lessons">
           <div class="stat-icon streak">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/>
+              <path d="M12 2v6m0 0l2-2m-2 2l-2-2m0 6v6m0 0l2-2m-2 2l-2-2"/>
+              <path d="M20 12h-6m0 0l2 2m-2-2l-2 2M4 12h6m0 0l-2 2m2-2l2 2"/>
             </svg>
           </div>
           <div class="stat-content">
@@ -453,7 +458,7 @@
     <div class="modal__content">
       <button class="modal__close" onclick="document.getElementById('aiPopup').classList.add('hidden')">&times;</button>
       <h2 class="modal__title card--focus">AI Assistant</h2>
-      <div class="ai__chatbox" id="ai-chatbox">
+      <div class="ai__chatbox" id="ai-popup-chatbox">
         <div class="chat-message ai">
           <p>Hello! I'm your AI assistant. How can I help you today?</p>
         </div>
