--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,14 +38,9 @@
           <h2 class="nav-quote">Get this shit done.</h2>
         </div>
         <div class="nav-right">
-          <button class="hamburger" aria-label="Toggle menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </button>
           <nav>
             <ul class="main-nav">
-              <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Dashboard</a></li>
               <li><a href="lessons.html">Lessons</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Daily ▾</a>
