--- a/frontend/index.html
+++ b/frontend/index.html
@@ -393,16 +393,35 @@
   </div>
 
   <!-- === REDESIGNED POPUPS/DRAWERS/MODALS === -->
-  <div id="drawer" class="modal drawer-modal hidden">
-    <div class="drawer__content">
-      <button class="modal__close" onclick="document.getElementById('drawer').classList.add('hidden')">&times;</button>
-      <h2 class="modal__title card--notes">Quick Actions</h2>
-      <ul class="drawer__links">
-        <li><button onclick="document.getElementById('taskPopup').classList.remove('hidden')">Add Task</button></li>
-        <li><button onclick="document.getElementById('goalPopup').classList.remove('hidden')">Add Goal</button></li>
-        <li><button onclick="document.getElementById('lessonPopup').classList.remove('hidden')">Add Lesson</button></li>
-        <li><button onclick="document.getElementById('aiPopup').classList.remove('hidden')">Open AI Assistant</button></li>
-      </ul>
+  <div id="drawer" class="modal desktop-drawer hidden">
+    <div class="desktop-drawer__content">
+      <div class="desktop-drawer__header">
+        <h2 class="desktop-drawer__title">Quick Actions</h2>
+        <button class="desktop-drawer__close" onclick="document.getElementById('drawer').classList.add('hidden')">&times;</button>
+      </div>
+      <div class="desktop-drawer__actions">
+        <button class="desktop-action-btn task-action" onclick="document.getElementById('taskPopup').classList.remove('hidden')">
+          <div class="action-icon">📝</div>
+          <div class="action-text">
+            <span class="action-title">Add Task</span>
+            <span class="action-subtitle">Create a new task</span>
+          </div>
+        </button>
+        <button class="desktop-action-btn goal-action" onclick="document.getElementById('goalPopup').classList.remove('hidden')">
+          <div class="action-icon">🎯</div>
+          <div class="action-text">
+            <span class="action-title">Add Goal</span>
+            <span class="action-subtitle">Set a new goal</span>
+          </div>
+        </button>
+        <button class="desktop-action-btn lesson-action" onclick="document.getElementById('lessonPopup').classList.remove('hidden')">
+          <div class="action-icon">📚</div>
+          <div class="action-text">
+            <span class="action-title">Add Lesson</span>
+            <span class="action-subtitle">Record a lesson learned</span>
+          </div>
+        </button>
+      </div>
     </div>
   </div>
 
