--- a/frontend/index.html
+++ b/frontend/index.html
@@ -400,21 +400,21 @@
         <button class="desktop-drawer__close" onclick="document.getElementById('drawer').classList.add('hidden')">&times;</button>
       </div>
       <div class="desktop-drawer__actions">
-        <button class="desktop-action-btn task-action" onclick="document.getElementById('taskPopup').classList.remove('hidden')">
+        <button class="desktop-action-btn task-action" onclick="document.getElementById('taskPopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
           <div class="action-icon">📝</div>
           <div class="action-text">
             <span class="action-title">Add Task</span>
             <span class="action-subtitle">Create a new task</span>
           </div>
         </button>
-        <button class="desktop-action-btn goal-action" onclick="document.getElementById('goalPopup').classList.remove('hidden')">
+        <button class="desktop-action-btn goal-action" onclick="document.getElementById('goalPopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
           <div class="action-icon">🎯</div>
           <div class="action-text">
             <span class="action-title">Add Goal</span>
             <span class="action-subtitle">Set a new goal</span>
           </div>
         </button>
-        <button class="desktop-action-btn lesson-action" onclick="document.getElementById('lessonPopup').classList.remove('hidden')">
+        <button class="desktop-action-btn lesson-action" onclick="document.getElementById('lessonPopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
           <div class="action-icon">📚</div>
           <div class="action-text">
             <span class="action-title">Add Lesson</span>
