--- a/frontend/index.html
+++ b/frontend/index.html
@@ -395,7 +395,7 @@
   <!-- === REDESIGNED POPUPS/DRAWERS/MODALS === -->
   
   <!-- Desktop Quick Actions Drawer (hidden on mobile) -->
-  <div id="drawer" class="modal desktop-drawer hidden hidden md:block">
+  <div id="drawer" class="desktop-drawer hidden hidden md:block">
     <div class="desktop-drawer__content">
       <div class="desktop-drawer__header">
         <h2 class="desktop-drawer__title">Quick Actions</h2>
