--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,89 +93,6 @@
     <!-- Modern Dashboard Layout -->
     <div id="home" class="modern-dashboard">
       
-      <!-- Top Stats Row -->
-      <div class="stats-row">
-        <div class="stat-card" id="stat-tasks-completed">
-          <div class="stat-icon tasks">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M9 11l3 3L22 4"/>
-              <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/>
-            </svg>
-          </div>
-          <div class="stat-content">
-            <div class="stat-value" id="tasks-completed-value">0</div>
-            <div class="stat-label">Tasks Done</div>
-          </div>
-        </div>
-
-        <div class="stat-card" id="stat-goals-completed">
-          <div class="stat-icon goals">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M12 2L2 7l10 5 10-5-10-5z"/>
-              <path d="M2 17l10 5 10-5"/>
-              <path d="M2 12l10 5 10-5"/>
-            </svg>
-          </div>
-          <div class="stat-content">
-            <div class="stat-value" id="goals-completed-value">0</div>
-            <div class="stat-label">Goals Met</div>
-          </div>
-        </div>
-
-        <div class="stat-card" id="stat-lessons-completed">
-          <div class="stat-icon lessons">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-              <polyline points="14,2 14,8 20,8"/>
-              <line x1="16" y1="13" x2="8" y2="13"/>
-              <line x1="16" y1="17" x2="8" y2="17"/>
-              <polyline points="10,9 9,9 8,9"/>
-            </svg>
-          </div>
-          <div class="stat-content">
-            <div class="stat-value" id="lessons-completed-value">0</div>
-            <div class="stat-label">Lessons Learned</div>
-          </div>
-        </div>
-
-        <div class="stat-card streak" id="streak-tasks">
-          <div class="stat-icon streak">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
-            </svg>
-          </div>
-          <div class="stat-content">
-            <div class="stat-value" id="tasks-streak-value">0</div>
-            <div class="stat-label">Task Streak</div>
-          </div>
-        </div>
-
-        <div class="stat-card streak" id="streak-goals">
-          <div class="stat-icon streak">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-            </svg>
-          </div>
-          <div class="stat-content">
-            <div class="stat-value" id="goals-streak-value">0</div>
-            <div class="stat-label">Goal Streak</div>
-          </div>
-        </div>
-
-        <div class="stat-card streak" id="streak-lessons">
-          <div class="stat-icon streak">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M12 2v6m0 0l2-2m-2 2l-2-2m0 6v6m0 0l2-2m-2 2l-2-2"/>
-              <path d="M20 12h-6m0 0l2 2m-2-2l-2 2M4 12h6m0 0l-2 2m2-2l2 2"/>
-            </svg>
-          </div>
-          <div class="stat-content">
-            <div class="stat-value" id="lessons-streak-value">0</div>
-            <div class="stat-label">Lesson Streak</div>
-          </div>
-        </div>
-      </div>
-
       <!-- Main Content Grid -->
       <div class="dashboard-grid">
         
@@ -340,6 +257,89 @@
             </div>
           </div>
 
+        </div>
+
+        <!-- Second Row - Stats and Streaks -->
+        <div class="stats-row">
+          <div class="stat-card" id="stat-tasks-completed">
+            <div class="stat-icon tasks">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M9 11l3 3L22 4"/>
+                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/>
+              </svg>
+            </div>
+            <div class="stat-content">
+              <div class="stat-value" id="tasks-completed-value">0</div>
+              <div class="stat-label">Tasks Done</div>
+            </div>
+          </div>
+
+          <div class="stat-card" id="stat-goals-completed">
+            <div class="stat-icon goals">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                <path d="M2 17l10 5 10-5"/>
+                <path d="M2 12l10 5 10-5"/>
+              </svg>
+            </div>
+            <div class="stat-content">
+              <div class="stat-value" id="goals-completed-value">0</div>
+              <div class="stat-label">Goals Met</div>
+            </div>
+          </div>
+
+          <div class="stat-card" id="stat-lessons-completed">
+            <div class="stat-icon lessons">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                <polyline points="14,2 14,8 20,8"/>
+                <line x1="16" y1="13" x2="8" y2="13"/>
+                <line x1="16" y1="17" x2="8" y2="17"/>
+                <polyline points="10,9 9,9 8,9"/>
+              </svg>
+            </div>
+            <div class="stat-content">
+              <div class="stat-value" id="lessons-completed-value">0</div>
+              <div class="stat-label">Lessons Learned</div>
+            </div>
+          </div>
+
+          <div class="stat-card streak" id="streak-tasks">
+            <div class="stat-icon streak">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
+              </svg>
+            </div>
+            <div class="stat-content">
+              <div class="stat-value" id="tasks-streak-value">0</div>
+              <div class="stat-label">Task Streak</div>
+            </div>
+          </div>
+
+          <div class="stat-card streak" id="streak-goals">
+            <div class="stat-icon streak">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+              </svg>
+            </div>
+            <div class="stat-content">
+              <div class="stat-value" id="goals-streak-value">0</div>
+              <div class="stat-label">Goal Streak</div>
+            </div>
+          </div>
+
+          <div class="stat-card streak" id="streak-lessons">
+            <div class="stat-icon streak">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 2v6m0 0l2-2m-2 2l-2-2m0 6v6m0 0l2-2m-2 2l-2-2"/>
+                <path d="M20 12h-6m0 0l2 2m-2-2l-2 2M4 12h6m0 0l-2 2m2-2l2 2"/>
+              </svg>
+            </div>
+            <div class="stat-content">
+              <div class="stat-value" id="lessons-streak-value">0</div>
+              <div class="stat-label">Lesson Streak</div>
+            </div>
+          </div>
         </div>
 
       </div>
