--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,35 +63,34 @@
       </div>
     </header>
 
-    <!-- Modern Dashboard Header -->
-    <div class="dashboard-header">
-      <div class="dashboard-header-content">
-        <div class="dashboard-title">
-          <div class="title-icon">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-              <line x1="9" y1="3" x2="9" y2="21"/>
-            </svg>
-          </div>
-          <div class="title-text">
-            <h1>Dashboard</h1>
-            <p>Your productivity command center</p>
-          </div>
-        </div>
-        <div class="dashboard-actions">
-          <button class="action-btn primary" id="quick-actions-btn">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <line x1="12" y1="5" x2="12" y2="19"/>
-              <line x1="5" y1="12" x2="19" y2="12"/>
-            </svg>
-            Quick Actions
-          </button>
-        </div>
-      </div>
-    </div>
-
     <!-- Modern Dashboard Layout -->
     <div id="home" class="modern-dashboard">
+      <!-- Dashboard Header -->
+      <div class="dashboard-header">
+        <div class="dashboard-header-content">
+          <div class="dashboard-title">
+            <div class="title-icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
+                <line x1="9" y1="3" x2="9" y2="21"/>
+              </svg>
+            </div>
+            <div class="title-text">
+              <h1>Dashboard</h1>
+              <p>Your productivity command center</p>
+            </div>
+          </div>
+          <div class="dashboard-actions">
+            <button class="action-btn primary" id="quick-actions-btn">
+              <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <line x1="12" y1="5" x2="12" y2="19"/>
+                <line x1="5" y1="12" x2="19" y2="12"/>
+              </svg>
+              Quick Actions
+            </button>
+          </div>
+        </div>
+      </div>
       
       <!-- Main Content Grid -->
       <div class="dashboard-grid">
