--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
     <header class="head">
       <div class="nav-container">
         <div class="nav-left">
-          <img class="logo" src="logo.png" alt="Logo">
+          <div class="logo">OBIZU</div>
           <h2 class="nav-quote">Get this shit done.</h2>
         </div>
         <div class="nav-right">
