--- a/frontend/lessons.html
+++ b/frontend/lessons.html
@@ -14,7 +14,7 @@
     <header class="head">
       <div class="nav-container">
         <div class="nav-left">
-          <img class="logo" src="logo.png" alt="">
+          <div class="logo">OBIZU</div>
           <h2 class="nav-quote">Get this shit done.</h2>
         </div>
         
